--- a/app/src/main/res/layout/fragment_personalized_eight.xml
+++ b/app/src/main/res/layout/fragment_personalized_eight.xml
@@ -6,10 +6,10 @@
     android:padding="16dp"
     android:background="@color/accent_white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.personalizedplan.screen.PersonalizedThreeFragment">
+    tools:context=".ui.personalizedplan.screen.PersonalizedEightFragment">
 
     <TextView
-        android:id="@+id/tv_fragment_three"
+        android:id="@+id/tv_wake_up_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/how_long_have_you_been_smoking"
@@ -22,7 +22,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/text_input_layout_smoking_start_date"
+        android:id="@+id/text_input_layout_wake_up_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:boxBackgroundMode="outline"
@@ -30,16 +30,57 @@
         app:boxCornerRadiusBottomStart="16dp"
         app:boxCornerRadiusTopEnd="16dp"
         app:boxCornerRadiusTopStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_fragment_three"
+        app:layout_constraintTop_toBottomOf="@id/tv_wake_up_time"
         app:startIconTint="@color/neutral_50"
         tools:layout_editor_absoluteY="16dp">
 
         <com.cpp.unsmoke.utils.customview.EditText
-            android:id="@+id/edt_smoking_start_date"
+            android:id="@+id/edt_wake_up_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="date"
+            tools:ignore="SpeakableTextPresentCheck"
+            android:text="@string/select_a_date_approximately" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/tv_first_smoke_time"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/how_long_have_you_been_smoking"
+        style="@style/TextContent.Title"
+        android:textSize="19sp"
+        android:textColor="@color/normal_green"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/text_input_layout_wake_up_time"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/text_input_layout_first_smoke_time"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:boxBackgroundMode="outline"
+        app:boxCornerRadiusBottomEnd="16dp"
+        app:boxCornerRadiusBottomStart="16dp"
+        app:boxCornerRadiusTopEnd="16dp"
+        app:boxCornerRadiusTopStart="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_first_smoke_time"
+        app:startIconTint="@color/neutral_50"
+        tools:layout_editor_absoluteY="16dp">
+
+        <com.cpp.unsmoke.utils.customview.EditText
+            android:id="@+id/edt_first_smoke_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="date"
@@ -59,6 +100,7 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
