--- a/app/src/main/res/layout/fragment_personalized_four.xml
+++ b/app/src/main/res/layout/fragment_personalized_four.xml
@@ -8,94 +8,132 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.personalizedplan.screen.PersonalizedFourFragment">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cv_plan"
+    <TextView
+        android:id="@+id/tv_start_smoking"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="@string/how_long_have_you_been_smoking"
+        style="@style/TextContent.Title"
+        android:textSize="19sp"
+        android:textColor="@color/normal_green"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/text_input_layout_total_cigarette"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:boxBackgroundMode="outline"
+        app:boxCornerRadiusBottomEnd="16dp"
+        app:boxCornerRadiusBottomStart="16dp"
+        app:boxCornerRadiusTopEnd="16dp"
+        app:boxCornerRadiusTopStart="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-        <androidx.constraintlayout.widget.ConstraintLayout
+        app:layout_constraintTop_toBottomOf="@id/tv_start_smoking"
+        app:startIconTint="@color/neutral_50"
+        tools:layout_editor_absoluteY="16dp">
+
+        <com.cpp.unsmoke.utils.customview.EditText
+            android:id="@+id/edt_total_cigarette"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp">
+            android:inputType="date"
+            tools:ignore="SpeakableTextPresentCheck"
+            android:text="@string/e_g_5" />
 
-            <ImageView
-                android:id="@+id/icon_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/fi_rr_smoke"/>
-
-            <TextView
-                android:id="@+id/tv_plan_name"
-                style="@style/TextContent.TitleSecondaryBlack"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="28dp"
-                android:layout_marginTop="16dp"
-                android:text="@string/plan_detail_title"
-                app:layout_constraintStart_toEndOf="@id/icon_2"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/tv_plan_duration"
-                style="@style/TextContent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="28dp"
-                android:layout_marginBottom="16dp"
-                android:text="@string/plan_duration"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/icon_2"
-                app:layout_constraintTop_toBottomOf="@id/tv_plan_name" />
-
-            <TextView
-                android:id="@+id/tv_percentage"
-                style="@style/TextContent.TitleSecondaryGreen"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:text="@string/plan_percentage"
-                android:textSize="27sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:id="@+id/tv_subtitle"
-        style="@style/TextContent.TitleSecondaryBlack"
+        android:id="@+id/tv_total_cigarette_perpack"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="@string/plan_detail_progress"
+        android:text="@string/how_many_total_cigarettes_per_pack_do_you_usually_consume"
+        style="@style/TextContent.Title"
+        android:textSize="19sp"
+        android:textColor="@color/normal_green"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/text_input_layout_total_cigarette"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cv_plan" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_plan"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/text_input_layout_total_cigarette_perpack"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="20dp"
+        android:layout_height="wrap_content"
+        app:boxBackgroundMode="outline"
+        app:boxCornerRadiusBottomEnd="16dp"
+        app:boxCornerRadiusBottomStart="16dp"
+        app:boxCornerRadiusTopEnd="16dp"
+        app:boxCornerRadiusTopStart="16dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_subtitle"
-        tools:listitem="@layout/detail_plan_row" />
+        app:layout_constraintTop_toBottomOf="@id/tv_total_cigarette_perpack"
+        app:startIconTint="@color/neutral_50"
+        tools:layout_editor_absoluteY="16dp">
 
+        <com.cpp.unsmoke.utils.customview.EditText
+            android:id="@+id/edt_total_cigarette_perpack"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="date"
+            tools:ignore="SpeakableTextPresentCheck"
+            android:text="@string/e_g_20" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/tv_price_perpack"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/how_much_does_1_pack_of_cigarettes_cost"
+        style="@style/TextContent.Title"
+        android:textSize="19sp"
+        android:textColor="@color/normal_green"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/text_input_layout_total_cigarette_perpack"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/text_input_layout_price_perpack"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:boxBackgroundMode="outline"
+        app:boxCornerRadiusBottomEnd="16dp"
+        app:boxCornerRadiusBottomStart="16dp"
+        app:boxCornerRadiusTopEnd="16dp"
+        app:boxCornerRadiusTopStart="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_price_perpack"
+        app:startIconTint="@color/neutral_50"
+        tools:layout_editor_absoluteY="16dp">
+
+        <com.cpp.unsmoke.utils.customview.EditText
+            android:id="@+id/edt_price_perpack"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="date"
+            tools:ignore="SpeakableTextPresentCheck"
+            android:text="@string/e_g_35000" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <com.cpp.unsmoke.utils.customview.CustomButton
         android:id="@+id/btn_next"
         android:layout_width="match_parent"
         android:layout_height="64dp"
-        android:layout_marginBottom="24dp"
         android:background="@drawable/button_state"
         android:fontFamily="@font/poppins_semibold"
         android:text="@string/next"
