feat: create business logic for dropdown

--- a/app/src/main/res/layout/fragment_personalized_one.xml
+++ b/app/src/main/res/layout/fragment_personalized_one.xml
@@ -94,6 +94,7 @@
         android:textSize="19sp"
         android:textColor="@color/normal_green"
         android:layout_marginTop="16dp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/text_input_layout_province" />
@@ -109,6 +110,7 @@
         app:boxCornerRadiusTopEnd="16dp"
         app:boxCornerRadiusTopStart="16dp"
         app:endIconDrawable="@drawable/dropdown_state"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_city">
