--- a/app/src/main/res/layout/fragment_personalized_eleven.xml
+++ b/app/src/main/res/layout/fragment_personalized_eleven.xml
@@ -33,7 +33,7 @@
                     android:layout_marginTop="16dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/fi_rr_smoke"/>
+                    app:srcCompat="@drawable/fi_rr_smoke" />
 
                 <TextView
                     android:id="@+id/tv_plan_name"
@@ -74,6 +74,21 @@
 
         </androidx.cardview.widget.CardView>
 
+        <com.cpp.unsmoke.utils.customview.CustomButton
+            android:id="@+id/btn_submit_plan"
+            android:layout_width="match_parent"
+            android:layout_height="64dp"
+            android:background="@drawable/button_state"
+            android:fontFamily="@font/poppins_semibold"
+            android:text="Submit Plan"
+            android:textAllCaps="false"
+            android:textSize="16sp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cv_plan" />
+
         <TextView
             android:id="@+id/tv_subtitle"
             style="@style/TextContent.TitleSecondaryBlack"
@@ -83,7 +98,7 @@
             android:text="@string/plan_detail_progress"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cv_plan" />
+            app:layout_constraintTop_toBottomOf="@id/btn_submit_plan" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_plan"
