--- a/app/src/main/res/layout/fragment_personalized_two.xml
+++ b/app/src/main/res/layout/fragment_personalized_two.xml
@@ -21,6 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <RadioGroup
+        android:id="@+id/radioButtonGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -31,6 +32,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv_fragment_two">
 
         <RadioButton
+            android:id="@+id/radioButtonMan"
             android:layout_width="match_parent"
             android:layout_height="64dp"
             android:layout_marginBottom="12dp"
@@ -44,6 +46,7 @@
             android:textSize="24sp" />
 
         <RadioButton
+            android:id="@+id/radioButtonWoman"
             android:layout_width="match_parent"
             android:layout_height="64dp"
             android:layout_marginBottom="12dp"
