feat: styling widget

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,9 +21,10 @@
         <item name="colorOnPrimary">@color/white</item>
         <item name="materialCalendarHeaderCancelButton">@style/CustomCancelButton</item>
         <item name="shapeAppearanceSmallComponent">@style/ShapeAppearance.App.SmallComponent</item>
-        <item name="shapeAppearanceMediumComponent">@style/ShapeAppearance.App.MediumComponent</item>
+        <item name="shapeAppearanceMediumComponent">@style/ShapeAppearance.App.MediumComponent
+        </item>
         <!-- Customize text field of the text input mode. -->
-<!--        <item name="textInputStyle">@style/Widget.App.TextInputLayout</item>-->
+        <!--        <item name="textInputStyle">@style/Widget.App.TextInputLayout</item>-->
     </style>
 
     <style name="ThemeOverlay.App.TimePicker" parent="ThemeOverlay.MaterialComponents.TimePicker">
@@ -83,6 +84,23 @@
         <item name="cornerSizeBottomRight">15%</item>
         <item name="cornerSizeTopLeft">0dp</item>
         <item name="cornerSizeTopRight">0dp</item>
+    </style>
+
+    <style name="Theme.Unsmoke.AppWidgetContainerParent" parent="@android:style/Theme.DeviceDefault">
+        <!-- Radius of the outer bound of widgets to make the rounded corners -->
+        <item name="appWidgetRadius">16dp</item>
+        <!--
+        Radius of the inner view's bound of widgets to make the rounded corners.
+        It needs to be 8dp or less than the value of appWidgetRadius
+        -->
+        <item name="appWidgetInnerRadius">8dp</item>
+        <item name="fontFamily">@font/poppins_bold</item>
+    </style>
+
+    <style name="Theme.Unsmoke.AppWidgetContainer" parent="Theme.Unsmoke.AppWidgetContainerParent">
+        <!-- Apply padding to avoid the content of the widget colliding with the rounded corners -->
+        <item name="appWidgetPadding">16dp</item>
+        <item name="fontFamily">@font/poppins_bold</item>
     </style>
 
 </resources>
