--- a/app/src/main/res/layout/dropdown_item.xml
+++ b/app/src/main/res/layout/dropdown_item.xml
@@ -3,6 +3,7 @@
     android:layout_height="wrap_content"
     android:padding="16dp"
     android:text="TextView"
+    android:background="@color/white"
     android:textSize="16sp"
     android:textStyle="bold"
     xmlns:android="http://schemas.android.com/apk/res/android" />
