feat: setup personalized viewmodel four until seven

--- a/app/src/main/res/layout/fragment_personalized_six.xml
+++ b/app/src/main/res/layout/fragment_personalized_six.xml
@@ -21,6 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <RadioGroup
+        android:id="@+id/rg_e_cigarettes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -31,6 +32,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv_fragment_six">
 
         <RadioButton
+            android:id="@+id/rb_yes_with_nicotine"
             android:layout_width="match_parent"
             android:layout_height="64dp"
             android:layout_marginBottom="12dp"
@@ -44,6 +46,7 @@
             android:textSize="24sp" />
 
         <RadioButton
+            android:id="@+id/rb_yes_no_nicotine"
             android:layout_width="match_parent"
             android:layout_height="64dp"
             android:layout_marginBottom="12dp"
@@ -57,6 +60,7 @@
             android:textSize="24sp" />
 
         <RadioButton
+            android:id="@+id/rb_no_but_used"
             android:layout_width="match_parent"
             android:layout_height="64dp"
             android:layout_marginBottom="12dp"
@@ -70,6 +74,7 @@
             android:textSize="24sp" />
 
         <RadioButton
+            android:id="@+id/rb_never_used"
             android:layout_width="match_parent"
             android:layout_height="64dp"
             android:layout_marginBottom="12dp"
