--- a/app/src/main/res/layout/fragment_personalized_seven.xml
+++ b/app/src/main/res/layout/fragment_personalized_seven.xml
@@ -21,6 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <RadioGroup
+        android:id="@+id/rg_tobacco_products"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -31,6 +32,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv_fragment_seven">
 
         <RadioButton
+            android:id="@+id/rb_yes_use_every_day"
             android:layout_width="match_parent"
             android:layout_height="64dp"
             android:layout_marginBottom="12dp"
@@ -44,6 +46,7 @@
             android:textSize="24sp" />
 
         <RadioButton
+            android:id="@+id/rb_yes_use_sometimes"
             android:layout_width="match_parent"
             android:layout_height="64dp"
             android:layout_marginBottom="12dp"
@@ -57,6 +60,7 @@
             android:textSize="24sp" />
 
         <RadioButton
+            android:id="@+id/rb_no_used_to"
             android:layout_width="match_parent"
             android:layout_height="64dp"
             android:layout_marginBottom="12dp"
@@ -70,6 +74,7 @@
             android:textSize="24sp" />
 
         <RadioButton
+            android:id="@+id/rb_no_never_used"
             android:layout_width="match_parent"
             android:layout_height="64dp"
             android:layout_marginBottom="12dp"
